WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121158
RenderWidget doesn't need to cache a FrameView pointer.
https://bugs.webkit.org/show_bug.cgi?id=121158
Summary
RenderWidget doesn't need to cache a FrameView pointer.
Andreas Kling
Reported
2013-09-11 06:52:53 PDT
RenderWidget doesn't need to cache a FrameView pointer.
Attachments
Patch
(5.78 KB, patch)
2013-09-11 06:53 PDT
,
Andreas Kling
koivisto
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-cq-02 for mac-mountainlion
(460.70 KB, application/zip)
2013-09-11 14:36 PDT
,
WebKit Commit Bot
no flags
Details
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion
(264.51 KB, application/zip)
2013-09-11 21:41 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-09-11 06:53:18 PDT
Created
attachment 211308
[details]
Patch
WebKit Commit Bot
Comment 2
2013-09-11 14:36:29 PDT
Comment on
attachment 211308
[details]
Patch Rejecting
attachment 211308
[details]
from commit-queue. New failing tests: editing/inserting/insert-paragraph-after-non-editable-node-before-text.html dom/html/level2/html/HTMLElement02.html http/tests/inspector/network/network-content-replacement-embed.html css2.1/20110323/replaced-intrinsic-002.htm compositing/geometry/empty-embed-rects.html css3/flexbox/flexitem.html compositing/plugins/1x1-composited-plugin.html http/tests/inspector/inspect-element.html accessibility/plugin.html css2.1/20110323/replaced-intrinsic-004.htm editing/execCommand/crash-extend-selection-forward.html dom/xhtml/level2/html/HTMLElement01.xhtml dom/html/level2/html/HTMLElement03.html http/tests/cache/cancel-during-revalidation-succeeded.html http/tests/inspector/network/network-embed.html compositing/plugins/composited-plugin.html editing/execCommand/remove-format-elements.html editing/editability/ignored-content.html editing/pasteboard/paste-noplugin.html compositing/plugins/small-to-large-composited-plugin.html css2.1/20110323/replaced-intrinsic-003.htm compositing/plugins/no-backing-store.html css2.1/20110323/replaced-intrinsic-001.htm compositing/iframes/iframe-position-absolute-with-padding-percentage-crash.html compositing/geometry/object-clip-rects-assertion.html compositing/plugins/large-to-small-composited-plugin.html dom/html/level2/html/AppletsCollection.html editing/selection/legal-positions.html dom/html/level2/html/HTMLElement01.html editing/pasteboard/pasting-tabs.html Full output:
http://webkit-queues.appspot.com/results/1737853
WebKit Commit Bot
Comment 3
2013-09-11 14:36:30 PDT
Created
attachment 211352
[details]
Archive of layout-test-results from webkit-cq-02 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-02 Port: mac-mountainlion Platform: Mac OS X 10.8.4
Build Bot
Comment 4
2013-09-11 21:41:04 PDT
Comment on
attachment 211308
[details]
Patch
Attachment 211308
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/1811028
New failing tests: editing/inserting/insert-paragraph-after-non-editable-node-before-text.html dom/html/level2/html/HTMLElement02.html http/tests/inspector/network/network-content-replacement-embed.html css2.1/20110323/replaced-intrinsic-002.htm compositing/geometry/empty-embed-rects.html css3/flexbox/flexitem.html compositing/plugins/1x1-composited-plugin.html accessibility/plugin.html editing/execCommand/crash-extend-selection-forward.html dom/xhtml/level2/html/HTMLElement01.xhtml editing/inserting/return-with-object-element.html dom/html/level2/html/HTMLElement03.html http/tests/cache/cancel-during-revalidation-succeeded.html http/tests/inspector/network/network-embed.html dom/xhtml/level2/html/HTMLElement03.xhtml compositing/plugins/composited-plugin.html editing/execCommand/remove-format-elements.html editing/editability/ignored-content.html editing/pasteboard/paste-noplugin.html compositing/plugins/small-to-large-composited-plugin.html css2.1/20110323/replaced-intrinsic-003.htm compositing/plugins/no-backing-store.html dom/xhtml/level2/html/HTMLElement02.xhtml css2.1/20110323/replaced-intrinsic-001.htm compositing/iframes/iframe-position-absolute-with-padding-percentage-crash.html compositing/geometry/object-clip-rects-assertion.html compositing/plugins/large-to-small-composited-plugin.html dom/html/level2/html/AppletsCollection.html editing/selection/legal-positions.html dom/html/level2/html/HTMLElement01.html
Build Bot
Comment 5
2013-09-11 21:41:06 PDT
Created
attachment 211395
[details]
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-05 Port: mac-mountainlion Platform: Mac OS X 10.8.4
Andreas Kling
Comment 6
2013-09-11 21:41:49 PDT
This won't work until we can stop clearing the RenderObject::node() pointer when destroying widgets.
Andreas Kling
Comment 7
2013-09-15 11:11:55 PDT
Committed
r155817
: <
http://trac.webkit.org/changeset/155817
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug