RenderWidget doesn't need to cache a FrameView pointer. <https://webkit.org/b/121158>

Reviewed by Antti Koivisto.

The FrameView can be found through RenderObject::view().frameView().
This way also gets you a reference, so no need for null-checking.

Canonical link: https://commits.webkit.org/139373@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155817 268f45cc-cd09-0410-ab3c-d52691b4dbfc