Source/WebCore/rendering/RenderWidget.h
@@ -83,8 +83,6 @@ public:
 protected:
     explicit RenderWidget(HTMLFrameOwnerElement&);
 
-    FrameView* frameView() const { return m_frameView; }
-
     virtual void styleDidChange(StyleDifference, const RenderStyle* oldStyle) OVERRIDE FINAL;
     virtual void layout() OVERRIDE;
     virtual void paint(PaintInfo&, const LayoutPoint&) OVERRIDE;
@@ -112,7 +110,6 @@ private:
 
     WeakPtrFactory<RenderWidget> m_weakPtrFactory;
     RefPtr<Widget> m_widget;
-    FrameView* m_frameView;
     IntRect m_clipRect; // The rectangle needs to remain correct after scrolling, so it is stored in content view coordinates, and not clipped to window.
 };
 
